--- a/ejerciciosUD4/package.json
+++ b/ejerciciosUD4/package.json
@@ -14,7 +14,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix --cache",
-    "format": "prettier --write --experimental-cli src/"
+    "format": "prettier --write --experimental-cli src/",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {
     "pinia": "^3.0.4",
@@ -31,6 +33,9 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
+    "@vuepress/bundler-vite": "^2.0.0-rc.26",
+    "@vuepress/cli": "^2.0.0-rc.26",
+    "@vuepress/theme-default": "^1.9.10",
     "eslint": "^9.39.1",
     "eslint-plugin-vue": "~10.5.1",
     "jiti": "^2.6.1",
@@ -41,6 +46,7 @@
     "vite": "^7.2.4",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vitest": "^4.0.14",
-    "vue-tsc": "^3.1.5"
+    "vue-tsc": "^3.1.5",
+    "vuepress": "^2.0.0-rc.26"
   }
 }
