--- a/ejerciciosUD4/package.json
+++ b/ejerciciosUD4/package.json
@@ -35,7 +35,7 @@
     "@vue/tsconfig": "^0.8.1",
     "@vuepress/bundler-vite": "^2.0.0-rc.26",
     "@vuepress/cli": "^2.0.0-rc.26",
-    "@vuepress/theme-default": "^1.9.10",
+    "@vuepress/theme-default": "^2.0.0-rc.120",
     "eslint": "^9.39.1",
     "eslint-plugin-vue": "~10.5.1",
     "jiti": "^2.6.1",
